# hashmap

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  benchmark.sh  graphs.ipynb  profile.sh  run_profiler.sh
data/: dictionary.txt
include/: benchmark.h  bucket.h  config.h  dictloader.h  hash.h  hashmap.h  stats.h
reports/: perf_v1.script  v1.json
src/: benchmark.cpp  bucket.cpp  dictloader.cpp  hash.cpp  hashmap.cpp  main.cpp  stats.cpp  strcmp_aligned32_noinline.nasm
stats/: hash::crc32.csv  hash::firstChar.csv  hash::gnu.csv  hash::rol.csv  hash::ror.csv  hash::strlen.csv  hash::sum(lower size).csv  hash::sum.csv  hash::zero.csv  hashtime.csv
stats/hash/: hash::crc32_sse_time.csv  hash::crc32_time.csv  hash::gnu_time.csv  hash::rol.csv  hash::rol_time.csv  hash::ror_time.csv
stats/lookup/: size_test.csv  v1.json  v2.json  v3.json  v4.json  v5.json  v6.json
